# khomdev_code_reviewer

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  run.py
.github/workflows/: audit.yml
ai_reviewer/: __init__.py  cli.py  github.py  llm_chat.py
web/: app.py
web/static/css/: style.css
web/static/js/: main.js
web/templates/: index.html
web3_auditor/: __init__.py  cli.py  github.py  gui.py  llm_chat.py  scanner.py
web3_auditor/api/: routes.py
web3_auditor/core/: scanner.py
web3_auditor/engines/: base.py  llm.py
web3_auditor/engines/static/: __init__.py  bandit_runner.py  slither_runner.py  vyper_runner.py
