[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-code-reviewer"
version = "0.1.0"
authors = [
  { name="Author Name", email="author@example.com" },
]
description = "An AI-powered local code reviewer with a PyQt6 GUI."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PyQt6>=6.0.0",
    "google-genai>=0.3.0",
    "markdown>=3.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6"
]

[project.scripts]
ai-reviewer = "ai_reviewer.cli:main"

[tool.setuptools.packages.find]
include = ["ai_reviewer", "ai_reviewer.*"]
