[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "web3-auditor"
version = "0.1.0"
authors = [
  { name="Author Name", email="author@example.com" },
]
description = "An AI-powered Smart Contract & Python Code Reviewer for Web3."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "PyQt6>=6.0.0",
    "google-genai>=0.3.0",
    "markdown>=3.0.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "jinja2>=3.1.2",
    "python-multipart>=0.0.6"
]

[project.scripts]
web3-auditor = "web3_auditor.cli:main"

[tool.setuptools.packages.find]
include = ["web3_auditor", "web3_auditor.*"]
